# PoQ

./: .gitignore  .gitmodules  CMakeLists.txt  POET++.c  POET++.cpp  README.md  base64.c  create-table.py  enclave.h  general_structs.c  general_structs.cpp  general_structs.h  json_checks.c  json_checks.h  make.sh  out.txt  poet_client.c  poet_client.cpp  poet_common_definitions.c  poet_common_definitions.h  poet_functions.c  poet_functions.h  poet_methods_test.cpp  poet_node_t.h  poet_server.c  poet_server.cpp  poet_server_functions.c  poet_server_functions.cpp  poet_server_functions.h  poet_shared_functions.c  poet_shared_functions.cpp  poet_shared_functions.h  poet_test  queue.h  queue_t.c  queue_t.h  shared_structs.h  socket_t.c  socket_t.h  tests.sh  (+1 more)
cmake/: FindSGX.cmake
poet_client/: enclave_helper.c  enclave_helper.h  poet_client.cpp  poet_client.h
poet_client/enclave/: enclave.c  enclave.edl
